--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.6</version>
 		</dependency>
+
+		<!-- Thumbnailator -->
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.8</version>
+		</dependency>
 				
 		<!-- AspectJ -->
 		<dependency>
